Expand example component to use actions

--- a/tests/dummy/app/templates/components/my-component.hbs
+++ b/tests/dummy/app/templates/components/my-component.hbs
@@ -1,3 +1,9 @@
 {{title}}
 
-My humble component
+<p>My humble component</p>
+
+<button {{action 'toggleIsExpanded'}}>Expand something</button>
+
+{{#if isExpanded}}
+  <p>I'm expanded!</p>
+{{/if}}
