--- a/tests/dummy/app/templates/components/nested-component.hbs
+++ b/tests/dummy/app/templates/components/nested-component.hbs
@@ -1,3 +1,5 @@
-<p>A nested component</p>
+<div class="nested-component">
+  <p>A nested component</p>
 
-<button id='nested-component-toggle-expanded' {{action 'nestedAction'}}>Nested component action</button>
+  <button id='nested-component-toggle-expanded' {{action 'nestedAction'}}>Nested component action</button>
+</div>
