chore: re-write tests to use modern Ember features
BREAKING CHANGE: Error about missing component is no longer swallowed in Production

--- a/tests/dummy/app/templates/components/top-level-component.hbs
+++ b/tests/dummy/app/templates/components/top-level-component.hbs
@@ -1,6 +1,6 @@
 <h1 id="component-title">{{title}}</h1>
 
-<p>top level component</p>
+<p data-test-top-level-component-message>top level component</p>
 
 <button id="toggle-expanded" {{action 'toggleIsExpanded'}}>Expand something</button>
 
