chore: fix template linting complaints

--- a/tests/dummy/app/templates/components/dummy-application.hbs
+++ b/tests/dummy/app/templates/components/dummy-application.hbs
@@ -2,4 +2,4 @@
   {{ember-islands}}
 {{/if}}
 
-<button {{action 'toggleIslandComponents'}}>Toggle Island Components</button>
+<button type="button" {{action 'toggleIslandComponents'}}>Toggle Island Components</button>
