--- a/tests/dummy/app/templates/components/top-level-component.hbs
+++ b/tests/dummy/app/templates/components/top-level-component.hbs
@@ -2,7 +2,7 @@
 
 <p data-test-top-level-component-message>top level component</p>
 
-<button id="toggle-expanded" {{action 'toggleIsExpanded'}}>Expand something</button>
+<button type="button" id="toggle-expanded" {{action 'toggleIsExpanded'}}>Expand something</button>
 
 {{#if isExpanded}}
   <p id="expanded-content">Expanded!</p>
